--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -28,12 +28,12 @@ body {
 }
 
 h1 {
-  font-size: 3.2rem;
+  font-size: 3rem;
   line-height: 1.1;
 }
 
 h2 {
-  font-size: 1.6rem;
+  font-size: 2.4rem;
 }
 
 h3 {
