--- a/src/app/projects/[slug]/Project.scss
+++ b/src/app/projects/[slug]/Project.scss
@@ -13,13 +13,26 @@ article {
         background-color: #646cff;
         cursor: pointer;
         transition: border-color 0.25s;
-        margin: 0 0.3em;
-        &:first-child { margin-left: 0; }
+        margin: 0.3em 0.6em 0.3em 0;
       }
-
     }
   }
   img {
     width: 700px;
+  }
+}
+
+@media (max-width: 600px) {
+  article {
+    header {
+      h1 {
+        font-size: 2em;
+      }
+      ul {
+        li {
+          font-size: 0.9em;
+        }
+      }
+    }
   }
 }
